# Clipper

./: .env  app.py  consumers.py  docker-compose.yml  dockerfile  index.html  launch.json  main.py  prometheus-config.yml  pyproject.toml  readme.md  words-highlighting.md
app/: db.py
clipper-console/: index.html  package.json  pnpm-lock.yaml
clipper-console/src/: App.tsx
clipper-console/src/components/: Layout.tsx
clipper-console/src/components/bucket/: BucketBrowser.tsx
clipper-console/src/components/edits/: BulkActionsBar.tsx  ExpandPanel.tsx  FiltersBar.tsx  OperationChips.tsx  StatusBadge.tsx  TableSkeleton.tsx  index.ts  status-config.tsx
clipper-console/src/components/ui/: accordion.tsx  dialog.tsx  toast.tsx
clipper-console/src/components/video-editor/: MediaPicker.tsx  OperationEditor.tsx  OperationList.tsx  OperationSummary.tsx  SubmitAndStatus.tsx  VideoEditView.tsx  (+2 more)
clipper-console/src/config/: social-media-ratios.ts  text-positions.ts
clipper-console/src/hooks/: use-clipper-api.ts  use-edit-session.ts
clipper-console/src/lib/: clipper-api.ts  relative-time.ts
clipper-console/src/pages/: ApiPage.tsx  BucketsPage.tsx  EditsPage.tsx  WorkflowsPage.tsx
clipper-console/src/types/: edit-session.ts
examples/: stories_text_example.py
modules/: buckets.py  db.py  logger.py  metrics.py  requests.py  responses.py  video_downloader.py  video_processor.py  worker.py
scripts/: ffmpeg.py  generate_launch_video_json.py
tests/e2e/: __init__.py  conftest.py  test_edits_db.py  test_worker_e2e.py
tests/unit/: test_video_processor.py  test_worker.py
(+3 files in other folders)
