[project]
name = "clipper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.33",
    "fastapi[standard]>=0.128.0",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.0.0",
]
