[project]
name = "clipper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.33",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.24.1",
    "pytest-asyncio>=1.2.0",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
